Revert "fixup! fix(update-checker): release checker wasting resources"
This reverts commit 8100e14720efec972b29b2168c49b24032143eca.